2007-05-25  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Added to combo box datasource methods.
	* PQSampleController.h:
	* English.lproj/MainMenu.nib/*: Small amount of tweaking.

2007-05-25  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.m ([-awakeFromNib]): Updates font sample after nib is loaded.
	* PQSampleController.m: Added -controlTextDidEndEditing: method.
	* PQSampleController.m: Default sample text is moved to Localizable.strings.
	* English.lproj/Localizable.strings: See above.

2007-05-25  Isaiah Beerbower <ipaqah@tm.net>
	* COPYING: Added license.
	* PQSampleController.*: Sampling is now implemented.
	* PQController.*: Now handles the font sample controller.
	* PQSampleController.*: Added sample text history.
	* PQSampleController.m: Fixed memory leak.
	* PQController.m ([PQController -dealloc]): Release objects when done.

2007-05-24  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.h: Comments.
	* PQSampleController.m: NSComboBoxDataSource methods added.
	* English.lproj/MainMenu.nib/*: Combo boxes no use data source.

2007-05-24  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.m: Added sorting of fonts.
	* PQFontFamily.h: Added -caseInsensitiveCompare: for sorting.
	* PQFontFamily.m: Same.

2007-05-24  Isaiah Beerbower <ipaqah@tm.net>
	* English.lproj/MainMenu.nib/*: Update nib

2007-05-24  Isaiah Beerbower <ipaqah@tm.net>
	* ChangeLog:
	* PQSampleController.h:
	* PQSampleController.m:
	* PQController.h:
	* PQController.m:
	* PQFontFamily.h:
	* PQFontFamily.m:
	* PQCompat.h:
	* PQMain.m:
	* Info.plist:
	* English.lproj/:
	* English.lproj/MainMenu.nib/*:
	* InfoPlist.strings:
	* FontManager.xcodeproj/*:
	Initial import of Font Manager.